--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,10 +3,16 @@
     <div class="logo">Angular Starter</div>
     <nav>
       <a routerLink="/button" routerLinkActive="active">
+        <i-lucide [img]="MousePointer2" class="nav-icon"></i-lucide>
         Buttons
       </a>
       <a routerLink="/grid" routerLinkActive="active">
+        <i-lucide [img]="Table2" class="nav-icon"></i-lucide>
         Data Grid
+      </a>
+      <a routerLink="/input" routerLinkActive="active">
+        <i-lucide [img]="TextCursorInput" class="nav-icon"></i-lucide>
+        Inputs
       </a>
     </nav>
   </aside>
