--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -40,6 +40,14 @@
         transition: all 0.2s;
         display: flex;
         align-items: center;
+        gap: 12px;
+
+        .nav-icon {
+          width: 18px;
+          height: 18px;
+          opacity: 0.7;
+          stroke-width: 2px;
+        }
 
         &:hover {
           background-color: rgba(0,0,0,0.03);
