feat: ui select box

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -26,6 +26,10 @@
         <i-lucide [img]="CalendarRange" class="nav-icon"></i-lucide>
         Date Range
       </a>
+      <a routerLink="/select-box" routerLinkActive="active">
+        <i-lucide [img]="SquareChevronDown" class="nav-icon"></i-lucide>
+        Select Box
+      </a>
     </nav>
   </aside>
 
